--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -15,15 +15,18 @@
     </span>
   </div>
 
-  <h2>Records</h2>
+  <h2>Sign In</h2>
 
-  <div class="album-list">
-    <% albums.forEach(function(album) { %>
-      <div>
-        <h5><a href="/albums/<%= album.id %>"><%= album.title %></a></h5>
-        <span><%= album.artist %></span>
-      </div>
-    <% }) %>
+  <% if(error) { %>
+    <h3><%= error %></h3>
+  <% } %>
+
+  <div class="signin">
+    <form action="/signin" method="post">
+      <input type="text" placeholder="Username" name="username"><br>
+      <input type="password" placeholder="Password" name="password"><br>
+      <input type="submit" value="Sign In">
+    </form>
   </div>
 
 </body>
