--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,17 +15,18 @@
     </span>
   </div>
 
-  <h2>Sign In</h2>
+  <h2>Sign Up</h2>
 
   <% if(error) { %>
     <h3><%= error %></h3>
   <% } %>
 
-  <div class="signin">
-    <form action="/signin" method="post">
-      <input type="text" placeholder="Email" name="email"><br>
+  <div class="signup">
+    <form action="/signup" method="post">
+      <input type="text" placeholder="Name" name="name"><br>
+      <input type="email" placeholder="Email" name="email"><br>
       <input type="password" placeholder="Password" name="password"><br>
-      <input type="submit" value="Sign In">
+      <input type="submit" value="Sign Up">
     </form>
   </div>
 
