Add dynamic sign-in/out links

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Vinyl</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  <script type="text/javascript" src="/script.js"></script>
-</head>
-<body>
-
+<%- include('header') -%>
   <h1>ERROR</h1>
   <h2><%= error.message %></h2>
   <pre><%= error.stack %></pre>
-
-</body>
-</html>
+<%- include('footer') -%>
