--- a/public/style.css
+++ b/public/style.css
@@ -3,3 +3,10 @@ html, body {
   padding: 0;
   width: 100vw;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 3vw 3vw;
+}
