--- a/views/album.ejs
+++ b/views/album.ejs
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Vinyl : <%= album.title %></title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  <script type="text/javascript" src="/script.js"></script>
-</head>
-<body>
-
+<%- include('header') -%>
   <h1><%= album.title %></h1>
   <em>by <%= album.artist %></em>
 
   <h2>Reviews</h2>
 
   <!-- TODO: implement album reviews -->
-
-</body>
-</html>
+<%- include('footer') -%>
