--- a/views/not_found.ejs
+++ b/views/not_found.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Vinyl</title>
-</head>
-<body>
-
+<%- include('header') -%>
   <h1>Page Not Found</h1>
 
   <h3>Sorry, the page you have requested was not found :/</h3>
-
-</body>
-</html>
+<%- include('footer') -%>
