--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Vinyl</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
-  <script type="text/javascript" src="/script.js"></script>
-</head>
-<body>
-
-  <div class="header">
-    <h1>Vinyl</h1>
-    <span>
-      <a href="signup">Sign Up</a>
-      <a href="signin">Sign In</a>
-    </span>
-  </div>
-
+<%- include('header') -%>
   <h2>Sign Up</h2>
 
   <% if(error) { %>
@@ -29,6 +13,4 @@
       <input type="submit" value="Sign Up">
     </form>
   </div>
-
-</body>
-</html>
+<%- include('footer') -%>
