--- a/public/style.css
+++ b/public/style.css
@@ -4,9 +4,18 @@ html, body {
   width: 100vw;
 }
 
+.index-banner {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 3vw 3vw;
+  margin: 0;
+  padding: 0 3vw;
+  font-size: 14px;
+  border-bottom: 1px solid black;
 }
