--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,11 +10,11 @@
     <h1>Vinyl</h1>
     <span>
       <% if(isLoggedIn) { %>
-        <a href="profile">Profile</a>
-        <a href="signout">Sign out</a>
+        <a href="/users/me">Profile</a>
+        <a href="/signout">Sign out</a>
       <% } else { %>
-        <a href="signup">Sign Up</a>
-        <a href="signin">Sign In</a>
+        <a href="/signup">Sign Up</a>
+        <a href="/signin">Sign In</a>
       <% } %>
     </span>
   </div>
