--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,8 +6,8 @@
   <script type="text/javascript" src="/script.js"></script>
 </head>
 <body>
-  <div class="header">
-    <h1>Vinyl</h1>
+  <header>
+    <h1><a class="header-logo" href="/">Vinyl</a></h1>
     <span>
       <% if(isLoggedIn) { %>
         <a href="/users/me">Profile</a>
@@ -17,4 +17,4 @@
         <a href="/signin">Sign In</a>
       <% } %>
     </span>
-  </div>
+  </header>
