--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -3,6 +3,6 @@
     <h2>Welcome to Vinyl</h1>
     <h3><a href="/signup">Sign Up</a> ||
     <a href="/signin">Sign In</a><h2>
-    <img class="index-banner" src="./disc.png">
+    <img src="./disc.png">
   </div>
 <%- include('footer') -%>
