--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,5 @@
 <%- include('header') -%>
-  <div class="profile-block">
+  <div class="profile">
     <img class="profile-picture" src="../pictures/profile_pic.jpg">
     <div class="profile-content">
       <h2><%= profile.name %></h2>
