--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -1,5 +1,5 @@
 <%- include('header') -%>
-  <div class="splash-block">
+  <div class="splash">
     <h2>Welcome to Vinyl</h1>
     <h3><a href="/signup">Sign Up</a> ||
     <a href="/signin">Sign In</a><h2>
