--- a/public/style.css
+++ b/public/style.css
@@ -42,6 +42,10 @@ header {
   font-size: 56px;
 }
 
+.album h3 {
+  font-size: 36px;
+}
+
 .album-header {
   text-align: center;
   margin-bottom: 5vw;
@@ -49,6 +53,25 @@ header {
 
 .album-reviews {
   margin: 0 15vw;
+}
+
+.album-reviews form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.album-reviews button {
+  height: 36px;
+  font-size: 14px;
+  background: #FFFFFF;
+  border: 2px solid black;
+  box-shadow: 3px 3px 1px gray;
+}
+
+.album-reviews button:hover {
+  background: red;
+  box-shadow: 3px 3px 1px darkred;
 }
 
 .index {
@@ -99,4 +122,19 @@ header {
 .review-header {
   display: flex;
   justify-content: space-between;
+}
+
+.new-review {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.new-review form {
+  display: flex;
+  flex-direction: column;
+}
+
+.new-review input {
+  margin-left: auto;
 }
