--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,6 +4,7 @@
   <title><%= windowTitle %> - Vinyl</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
   <script type="text/javascript" src="/script.js"></script>
+  <script src="https://use.fontawesome.com/b5eb109e46.js"></script>
 </head>
 <body>
   <header>
