--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,14 +1,16 @@
 <%- include('header') -%>
-  <h2>Sign In</h2>
-
-  <% if (error) { %>
-    <h3><%= error %></h3>
-  <% } %>
-
   <div class="signin">
+    <h2>Sign In</h2>
+
+    <% if (error) { %>
+      <h3><%= error %></h3>
+    <% } %>
+
     <form action="/signin" method="post">
-      <input type="text" placeholder="Email" name="email"><br>
-      <input type="password" placeholder="Password" name="password"><br>
+      Email<br>
+      <input type="text" placeholder="Email" name="email"><br><br>
+      Password<br>
+      <input type="password" placeholder="Password" name="password"><br><br>
       <input type="submit" value="Sign In">
     </form>
   </div>
